# emscripten-demo

./: .env.example  .envrc  .gitignore  .sentryclirc.example  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  README_zh.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.js
js/: app.js
js/__tests__/: app.test.js
wasm/: demo.cpp  hack.cpp
